<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.hardskygames.luckycalories.calories.CaloriesListFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listCalories"
        android:background="#e2e2e2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

    </android.support.v7.widget.RecyclerView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_white_24dp"
        app:layout_anchor="@id/listCalories"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_behavior="com.hardskygames.luckycalories.common.ScrollAwareFABBehavior"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_gravity="bottom|center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:indeterminateOnly="true"
        android:visibility="invisible" />

</android.support.design.widget.CoordinatorLayout>
