...
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:layout_height="88dp">

    <TextView
        android:id="@+id/txtMeal"
        android:textSize="16sp"
        android:textColor="#212121"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="Meat" />
    <TextView
        android:id="@+id/txtKCal"
        android:textSize="14sp"
        android:textColor="#212121"
        android:layout_below="@id/txtMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="400" />
    <TextView
...
